--- a/deno.json
+++ b/deno.json
@@ -7,36 +7,20 @@
     "preview": "deno run -A main.ts",
     "update": "deno run -A -r https://fresh.deno.dev/update ."
   },
-  "lint": {
-    "rules": {
-      "tags": [
-        "fresh",
-        "recommended"
-      ]
-    },
-    "exclude": [
-      "_fresh"
-    ]
-  },
-  "fmt": {
-    "exclude": [
-      "_fresh"
-    ]
-  },
-  "compilerOptions": {
-    "jsx": "react-jsx",
-    "jsxImportSource": "preact"
-  },
+  "lint": { "rules": { "tags": ["fresh", "recommended"] } },
+  "compilerOptions": { "jsx": "react-jsx", "jsxImportSource": "preact" },
   "imports": {
-    "$fresh/": "https://deno.land/x/fresh@1.4.3/",
-    "preact": "https://esm.sh/preact@10.15.1",
-    "preact/": "https://esm.sh/preact@10.15.1/",
-    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.2.1",
-    "@preact/signals": "https://esm.sh/*@preact/signals@1.1.3",
-    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.2.3",
-    "$std/": "https://deno.land/std@0.203.0/",
+    "$fresh/": "https://deno.land/x/fresh@1.6.8/",
+    "preact": "https://esm.sh/preact@10.19.6",
+    "preact/": "https://esm.sh/preact@10.19.6/",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.4.2",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.3",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.6.0",
+    "$std/": "https://deno.land/std@0.221.0/",
     "markdown-it": "https://esm.sh/markdown-it@13.0.2",
-    "markdown-it-footnote": "https://esm.sh/markdown-it-footnote@3.0.3",
-    "preact-html-converter": "https://esm.sh/preact-html-converter@0.4.2"
-  }
+    "markdown-it-footnote": "https://esm.sh/markdown-it-footnote@4.0.0",
+    "preact-html-converter": "https://esm.sh/preact-html-converter@0.4.2",
+    "highlightjs": "https://esm.sh/highlight.js@11.9.0"
+  },
+  "exclude": ["**/_fresh/*"]
 }
