--- a/deno.json
+++ b/deno.json
@@ -2,6 +2,8 @@
   "lock": false,
   "tasks": {
     "check": "deno fmt --check && deno lint && deno check **/*.ts && deno check **/*.tsx",
+    "cli": "echo \"import '\\$fresh/src/dev/cli.ts'\" | deno run --unstable -A -",
+    "manifest": "deno task cli manifest $(pwd)",
     "start": "deno run -A --watch=static/,routes/ dev.ts",
     "build": "deno run -A dev.ts build",
     "preview": "deno run -A main.ts",
@@ -13,19 +15,25 @@
         "fresh",
         "recommended"
       ]
-    },
-    "exclude": [
-      "_fresh"
-    ]
+    }
   },
-  "fmt": {
-    "exclude": [
-      "_fresh"
-    ]
+  "exclude": [
+    "**/_fresh/*"
+  ],
+  "imports": {
+    "$fresh/": "https://deno.land/x/fresh@1.7.3/",
+    "preact": "https://esm.sh/preact@10.22.0",
+    "preact/": "https://esm.sh/preact@10.22.0/",
+    "@preact/signals": "https://esm.sh/*@preact/signals@1.2.2",
+    "@preact/signals-core": "https://esm.sh/*@preact/signals-core@1.5.1",
+    "$std/": "https://deno.land/std@0.216.0/",
+    "mdx-js/mdx": "https://esm.sh/@mdx-js/mdx@3.1.0",
+    "rehype-highlight": "https://esm.sh/rehype-highlight@7.0.1",
+    "remark-gfm": "https://esm.sh/remark-gfm@4.0.0",
+    "preact-render-to-string": "https://esm.sh/*preact-render-to-string@6.5.11"
   },
   "compilerOptions": {
     "jsx": "react-jsx",
     "jsxImportSource": "preact"
-  },
-  "importMap": "import_map.json"
+  }
 }
